# SilverLock

./: CMakeLists.txt  README.md
src/: crypto.cpp  crypto.h  main.cpp  utils.cpp  utils.h
